chore: bump deps to fix CVE-2021-23440

--- a/haste-server/src/frontend/index.html
+++ b/haste-server/src/frontend/index.html
@@ -8,7 +8,7 @@
 			rel="stylesheet"
 		/>
 
-		<script defer="true" type="text/javascript" src="./index.ts"></script>
+		<script defer="true" type="module" src="./index.ts"></script>
 
 		<!-- SEO -->
 		<link rel="canonical" href="https://hastebin.skyra.pw" />
